add orders and product list dataview

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <div class="layout">
     <app-sidebar></app-sidebar>
     <div class="content">
-      <div class="card flex justify-center m-0">
+      <div class="card m-0">
         <router-outlet></router-outlet>
       </div>
     </div>
