--- a/src/app/products/products.html
+++ b/src/app/products/products.html
@@ -1,79 +1,83 @@
 <p-panel header="Products">
-  <p-table
-    #dt
-    [value]="products"
-    [paginator]="true"
-    [rows]="5"
-    [rowsPerPageOptions]="[5, 10, 20]"
-    [globalFilterFields]="['id', 'name', 'price', 'category']"
-    [tableStyle]="{ 'min-width': '50rem' }"
-  >
-    <ng-template pTemplate="caption">
-      <div class="globalSearch">
-        <input
-          #globalFilter
-          pInputText
-          type="text"
-          (input)="dt?.filterGlobal(globalFilter.value, 'contains')"
-          placeholder="Global Search"
-        />
-      </div>
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr>
-        <th pSortableColumn="id">
-          ID
-          <p-sortIcon field="id" />
-        </th>
-        <th>
-          Name
-          <p-columnFilter type="text" field="name" display="menu" />
-        </th>
-        <th>
-          Price
-          <p-columnFilter type="text" field="price" display="menu" />
-        </th>
-        <th>
-          Category
-          <p-columnFilter field="category" matchMode="in" display="menu" [showMatchModes]="false" [showOperator]="false" [showAddButton]="false">
-            <ng-template #filter let-filter="filterCallback">
-              <p-multiselect
-                [(ngModel)]="selectedCategories"
-                [options]="categories"
-                placeholder="Any"
-                (onChange)="filter($event.value)"
-                [style]="{ 'min-width': '14rem' }"
-                [panelStyle]="{ minWidth: '16rem' }"
-              >
-                <ng-template let-option #item>
-                  <div class="flex items-center gap-2">
-                    <span>{{ option.label }}</span>
-                  </div>
-                </ng-template>
-              </p-multiselect>
-            </ng-template>
-          </p-columnFilter>
-        </th>
-        <th>Actions</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-product>
-      <tr>
-        <td>{{ product.id }}</td>
-        <td>{{ product.name }}</td>
-        <td>{{ product.price }}</td>
-        <td>{{ product.category }}</td>
-        <td>
-          <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary"></p-button>
-          <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger"></p-button>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="5">No products found.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <p-dataview #dv [value]="products" [layout]="layout">
+      <ng-template #header>
+          <div class="flex justify-end">
+              <p-selectbutton [(ngModel)]="layout" [options]="options" [allowEmpty]="false">
+                  <ng-template #item let-item>
+                      <i class="pi " [ngClass]="{ 'pi-bars': item.value === 'list', 'pi-table': item.value === 'grid' }"></i>
+                  </ng-template>
+              </p-selectbutton>
+          </div>
+      </ng-template>
+      <ng-template #list let-items>
+          <div *ngFor="let item of items; let first = first" class="p-1 ">
+            <div
+                class="flex flex-col sm:flex-row sm:items-center w-full gap-4"
+                [ngClass]="{ 'border-t border-surface-200 dark:border-surface-700': !first }"
+            >
+                <div class="md:w-40 relative">
+                    <img
+                        class="block xl:block mx-auto rounded w-full"
+                        [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image"
+                        [alt]="item.name"
+                    />
+                </div>
+                <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
+                    <div class="flex flex-row md:flex-col justify-between items-start gap-2">
+                        <div>
+                            <span class="font-medium text-secondary text-sm">{{ item.category }}</span>
+                            <div class="text-lg font-medium text-surface-900 dark:text-surface-0 mt-2">{{ item.name }}</div>
+                        </div>
+                        <div class="bg-surface-100 dark:bg-surface-700 p-1" style="border-radius: 30px">
+                            <div
+                                class="bg-surface-0 dark:bg-surface-900 flex items-center gap-2 justify-center py-1 px-2"
+                                style="border-radius: 30px; box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.04), 0px 1px 2px 0px rgba(0, 0, 0, 0.06)"
+                            >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col md:items-end gap-8">
+                        <span class="text-xl font-semibold text-surface-900 dark:text-surface-0">{{
+                            '$' + item.price
+                        }}</span>
+                        <div class="flex flex-row-reverse md:flex-row gap-2">
+                            <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(item)"></p-button>
+                            <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (onClick)="confirmDelete(item)"></p-button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+      </ng-template>
+      <ng-template #grid let-items>
+        <div class="grid grid-cols-12 gap-4">
+          <div *ngFor="let product of items" class="col-span-12 sm:col-span-6 md:col-span-4 xl:col-span-6 p-2">
+            <p-card>
+              <ng-template #header>
+                <img alt="Card" class="w-60 justify-self-center rounded" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" />
+              </ng-template>
+              <div class="flex flex-col items-center gap-2 py-2">
+                <div class="text-lg font-medium">{{ product.name }}</div>
+                <div class="text-secondary text-sm">{{ product.category }}</div>
+                <div class="text-xl font-semibold">{{ '$' + product.price }}</div>
+                <div class="flex gap-2 mt-2">
+                  <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(product)"></p-button>
+                  <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (onClick)="confirmDelete(product)"></p-button>
+                </div>
+              </div>
+            </p-card>
+          </div>
+        </div>
+      </ng-template>
+</p-dataview>
 </p-panel>
+
+<p-confirmDialog></p-confirmDialog>
+<app-edit-product-dialog
+  [product]="selectedProduct"
+  [(visible)]="editDialogVisible"
+  (save)="onProductSaved($event)"
+  (cancel)="editDialogVisible = false"
+></app-edit-product-dialog>
+
 <router-outlet></router-outlet>
