--- a/src/app/sidebar/sidebar.html
+++ b/src/app/sidebar/sidebar.html
@@ -10,6 +10,11 @@
                 <i class="pi pi-shopping-bag"></i>
             </a>
         </li>
+        <li>
+            <a routerLink="/orders" routerLinkActive="active" pTooltip="Orders">
+                <i class="pi pi-receipt"></i>
+            </a>
+        </li>
     </ul>
     <ul class="settings">
         <li>
