--- a/src/app/sidebar/sidebar.scss
+++ b/src/app/sidebar/sidebar.scss
@@ -2,13 +2,13 @@
     height: calc(100vh - 2rem);
     margin: 1rem 0.5rem;
     width: 60px;
-    background-color: #f8fafc;
+    background-color: #26262617;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 7px;
     position: fixed;
-    border: solid 1px #2626263a;
+    // border: solid 1px #2626263a;
     justify-content: space-between;
     box-sizing: border-box;
 
@@ -42,7 +42,7 @@
     }
 
     i {
-        font-size: 1.2rem;
+        font-size: 1rem;
         padding: 10px;
         border-radius: 7px;
         transition: background 0.2s, color 0.2s;
