--- a/src/app/products/products.html
+++ b/src/app/products/products.html
@@ -24,14 +24,14 @@
                 <div class="md:w-40 relative">
                     <img
                         class="block xl:block mx-auto rounded w-full"
-                        [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image"
+                        [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image_url"
                         [alt]="item.name"
                     />
                 </div>
                 <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
                     <div class="flex flex-row md:flex-col justify-between items-start gap-2">
                         <div>
-                            <span class="font-medium text-secondary text-sm">{{ item.category }}</span>
+                            <span class="font-medium text-secondary text-sm">{{ item.category.name }}</span>
                             <div class="text-lg font-medium text-surface-900 dark:text-surface-0 mt-2">{{ item.name }}</div>
                         </div>
                         <div class="bg-surface-100 dark:bg-surface-700 p-1" style="border-radius: 30px">
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-col md:ite</div>ms-end gap-8">
+                    <div class="flex flex-col md:items-end gap-8">
                         <span class="text-xl font-semibold text-surface-900 dark:text-surface-0">{{
                             '$' + item.price
                         }}</span>
@@ -60,11 +60,10 @@
           <div *ngFor="let product of items" class="col-span-12 sm:col-span-6 md:col-span-4 xl:col-span-3 p-2">
             <p-card>
               <div>
-                <img alt="Card" class="w-100 justify-self-center rounded" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" />
-              </div>
+                <img alt="Card" class="w-100 justify-self-center rounded" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image_url" /></div>
               <div class="flex flex-col items-center gap-2 py-2">
                 <div class="text-lg font-medium">{{ product.name }}</div>
-                <div class="text-secondary text-sm">{{ product.category }}</div>
+                <div class="text-secondary text-sm">{{ product.category.name }}</div>
                 <div class="text-xl font-semibold">{{ '$' + product.price }}</div>
                 <div class="flex gap-2 mt-2">
                   <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(product)"></p-button>
