--- a/src/app/products/products.html
+++ b/src/app/products/products.html
@@ -1,81 +1,70 @@
 <p-panel header="Products">
   <p-dataview #dv 
-  [value]="products" 
-  [layout]="layout"
-  [paginator]="true"
-  [rows]="8"
-  [rowsPerPageOptions]="[8, 16, 24]"
-  >
-      <ng-template #header>
-          <div class="flex justify-end">
-              <p-selectbutton [(ngModel)]="layout" [options]="options" [allowEmpty]="false">
-                  <ng-template #item let-item>
-                      <i class="pi " [ngClass]="{ 'pi-bars': item.value === 'list', 'pi-table': item.value === 'grid' }"></i>
-                  </ng-template>
-              </p-selectbutton>
+    [value]="products" 
+    [layout]="layout"
+    [paginator]="true"
+    [rows]="8"
+    [rowsPerPageOptions]="[8, 16, 24]">
+    <ng-template #header>
+      <div class="flex justify-end">
+        <p-selectbutton [(ngModel)]="layout" [options]="options" [allowEmpty]="false">
+          <ng-template #item let-item>
+            <i class="pi " [ngClass]="{ 'pi-bars': item.value === 'list', 'pi-table': item.value === 'grid' }"></i>
+          </ng-template>
+        </p-selectbutton>
+      </div>
+    </ng-template>
+
+    <ng-template #list let-items>
+      <div *ngFor="let item of items; let first = first">
+        <div class="flex flex-col sm:flex-row sm:items-center w-full gap-4 p-3" [ngClass]="{ 'border-t border-surface-200 dark:border-surface-700': !first }">
+          <div class="md:w-40 relative">
+            <img class="block xl:block  rounded w-full" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image_url" [alt]="item.name" />
           </div>
-      </ng-template>
-      <ng-template #list let-items>
-          <div *ngFor="let item of items; let first = first" class="p-1 ">
-            <div
-                class="flex flex-col sm:flex-row sm:items-center w-full gap-4"
-                [ngClass]="{ 'border-t border-surface-200 dark:border-surface-700': !first }"
-            >
-                <div class="md:w-40 relative">
-                    <img
-                        class="block xl:block mx-auto rounded w-full"
-                        [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image_url"
-                        [alt]="item.name"
-                    />
-                </div>
-                <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
-                    <div class="flex flex-row md:flex-col justify-between items-start gap-2">
-                        <div>
-                            <span class="font-medium text-secondary text-sm">{{ item.category.name }}</span>
-                            <div class="text-lg font-medium text-surface-900 dark:text-surface-0 mt-2">{{ item.name }}</div>
-                        </div>
-                        <div class="bg-surface-100 dark:bg-surface-700 p-1" style="border-radius: 30px">
-                            <div
-                                class="bg-surface-0 dark:bg-surface-900 flex items-center gap-2 justify-center py-1 px-2"
-                                style="border-radius: 30px; box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.04), 0px 1px 2px 0px rgba(0, 0, 0, 0.06)"
-                            >
-                            </div>
-                        </div>
-                    </div>
-                    <div class="flex flex-col md:items-end gap-8">
-                        <span class="text-xl font-semibold text-surface-900 dark:text-surface-0">{{
-                            '$' + item.price
-                        }}</span>
-                        <div class="flex flex-row-reverse md:flex-row gap-2">
-                            <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(item)"></p-button>
-                            <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (onClick)="confirmDelete(item)"></p-button>
-                        </div>
-                    </div>
-                </div>
+          <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
+            <div class="flex flex-row md:flex-col justify-between items-start gap-2">
+              <div>
+                <!-- Affichage de la catégorie avec l'objet category complet -->
+                <span class="font-medium text-secondary text-sm">{{ item.category?.name }}</span>
+                <div class="text-lg font-medium mt-2">{{ item.name }}</div>
+              </div>
+              
+            </div>
+            <div class="flex flex-col md:items-end gap-8">
+              <span class="text-xl font-semibold text-surface-900 dark:text-surface-0">{{ '$' + item.price }}</span>
+              <div class="flex flex-row-reverse md:flex-row gap-2">
+                <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(item)"></p-button>
+                <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (onClick)="confirmDelete(item)"></p-button>
+              </div>
             </div>
           </div>
-      </ng-template>
-      <ng-template #grid let-items>
-        <div class="grid grid-cols-12 gap-4">
-          <div *ngFor="let product of items" class="col-span-12 sm:col-span-6 md:col-span-4 xl:col-span-3 p-2">
-            <p-card>
-              <div>
-                <img alt="Card" class="w-100 justify-self-center rounded" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image_url" /></div>
-              <div class="flex flex-col items-center gap-2 py-2">
-                <div class="text-lg font-medium">{{ product.name }}</div>
-                <div class="text-secondary text-sm">{{ product.category.name }}</div>
-                <div class="text-xl font-semibold">{{ '$' + product.price }}</div>
-                <div class="flex gap-2 mt-2">
-                  <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(product)"></p-button>
-                  <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (onClick)="confirmDelete(product)"></p-button>
-                </div>
-              </div>
-            </p-card>
-          </div>
         </div>
-      </ng-template>
-</p-dataview>
+      </div>
+    </ng-template>
+
+    <ng-template #grid let-items>
+      <div class="grid grid-cols-12 gap-4">
+        <div *ngFor="let product of items" class="col-span-12 sm:col-span-6 md:col-span-4 xl:col-span-3 p-2">
+          <p-card>
+            <div>
+              <img alt="Card" class="w-100 justify-self-center rounded" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image_url" />
+            </div>
+            <div class="flex flex-col items-center gap-2 py-2">
+              <div class="text-lg font-medium">{{ product.name }}</div>
+              <div class="text-secondary text-sm">{{ product.category?.name }}</div>  <!-- Affichage de la catégorie -->
+              <div class="text-xl font-semibold">{{ '$' + product.price }}</div>
+              <div class="flex gap-2 mt-2">
+                <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="editProduct(product)"></p-button>
+                <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (onClick)="confirmDelete(product)"></p-button>
+              </div>
+            </div>
+          </p-card>
+        </div>
+      </div>
+    </ng-template>
+  </p-dataview>
 </p-panel>
+
 
 <p-confirmDialog></p-confirmDialog>
 <app-edit-product-dialog
