add users in back office

--- a/src/app/orders/edit-order-dialog/edit-order-dialog.html
+++ b/src/app/orders/edit-order-dialog/edit-order-dialog.html
@@ -3,7 +3,7 @@
     <!-- Customer Field -->
     <div class="field">
       <label for="customer" class="block text-sm font-semibold text-gray-800">Customer</label>
-      <input id="customer" type="text" pInputText [(ngModel)]="formData.customer" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+      <input id="idCustomer" type="text" pInputText [(ngModel)]="formData.idCustomer" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500" />
     </div>
 
     <!-- Total Field -->
