--- a/src/app/sidebar/sidebar.html
+++ b/src/app/sidebar/sidebar.html
@@ -6,6 +6,11 @@
             </a>
         </li>
         <li>
+            <a routerLink="/users" routerLinkActive="active" pTooltip="Users">
+                <i class="pi pi-user"></i>
+            </a>
+        </li>
+        <li>
             <a routerLink="/products" routerLinkActive="active" pTooltip="Products">
                 <i class="pi pi-shopping-bag"></i>
             </a>
