--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -83,16 +83,23 @@
             <p-table [value]="orderItems[order.id]" dataKey="id">
               <ng-template pTemplate="header">
                 <tr>
+                  <th></th>
                   <th>Product Name</th>
                   <th>Price</th>
                   <th>Quantity</th>
+                  <th>Total</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-item>
                 <tr>
+                  <td>
+                    <img class="rounded w-full" 
+                    [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image_url" alt="{{ item.name }}" style="width: 50px; height: 50px; object-fit: cover;" />
+                  </td>
                   <td>{{ item.name }}</td>
                   <td>{{ item.price }} €</td>
                   <td>{{ item.quantity }}</td>
+                  <td>{{ item.price * item.quantity }} €</td>
                 </tr>
               </ng-template>
               <ng-template pTemplate="emptymessage">
@@ -101,6 +108,13 @@
                 </tr>
               </ng-template>
             </p-table>
+            <table class="w-full mt-4">
+              <tr>
+                <td>
+                  <span class="font-bold text-end">Total: </span>{{ getTotalForOrder(order.id) }} €
+                </td>
+              </tr>
+            </table>
           </div>
         </td>
       </tr>
