--- a/src/app/users/edit-user-dialog/edit-user-dialog.html
+++ b/src/app/users/edit-user-dialog/edit-user-dialog.html
@@ -27,7 +27,7 @@
       </p-select>
     </div>
 
-    <!-- Display Customer Specific Fields if Role is Customer -->
+    <!-- Display Customer-Specific Fields if Role is Customer -->
     <div *ngIf="formData.role === 'customer'">
       <div class="field">
         <label for="first_name" class="block text-sm font-semibold text-gray-800">First Name</label>
