--- a/src/app/admin/sidebar/sidebar.html
+++ b/src/app/admin/sidebar/sidebar.html
@@ -1,29 +1,29 @@
 <div class="sidebar">
     <ul>
        <li>
-            <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" pTooltip="Home">
+            <a routerLink="/admin/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" pTooltip="Home">
                 <i class="pi pi-home"></i>
             </a>
         </li>
         <li>
-            <a routerLink="/users" routerLinkActive="active" pTooltip="Users">
+            <a routerLink="/admin/users" routerLinkActive="active" pTooltip="Users">
                 <i class="pi pi-user"></i>
             </a>
         </li>
         <li>
-            <a routerLink="/products" routerLinkActive="active" pTooltip="Products">
+            <a routerLink="/admin/products" routerLinkActive="active" pTooltip="Products">
                 <i class="pi pi-shopping-bag"></i>
             </a>
         </li>
         <li>
-            <a routerLink="/orders" routerLinkActive="active" pTooltip="Orders">
+            <a routerLink="/admin/orders" routerLinkActive="active" pTooltip="Orders">
                 <i class="pi pi-receipt"></i>
             </a>
         </li>
     </ul>
     <ul class="settings">
         <li>
-            <a routerLink="/settings" routerLinkActive="active" pTooltip="Settings">
+            <a routerLink="/admin/settings" routerLinkActive="active" pTooltip="Settings">
                 <i class="pi pi-cog"></i>
             </a>
         </li>
