--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -20,14 +20,14 @@
             <ul x-ref="logos" class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll">
                 <ng-container *ngFor="let logo of logos">
                     <li>
-                        <img [src]="logo" class="logo-img h-8 px-4" alt="logo" />
+                        <img [src]="logo" class="logo-img h-5 sm:h-8 px-2 sm:px-4" alt="logo" />
                     </li>
                 </ng-container>
             </ul>
             <ul x-ref="logos" class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll">
                 <ng-container *ngFor="let logo of logos">
                     <li>
-                        <img [src]="logo" class="logo-img h-8 px-4" alt="logo" />
+                        <img [src]="logo" class="logo-img h-5 sm:h-8 px-2 sm:px-4" alt="logo" />
                     </li>
                 </ng-container>
             </ul>         
