--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -1,24 +1,83 @@
 main{
+    padding-bottom: 20px;
     .start-page{
+        position: relative;
         min-height: 100vh;
         width: 100%;
+        overflow-x: hidden;
+
+        .bg-image{
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+            filter: brightness(0.6);
+        }
+
+        .large-cloud{
+            position: absolute;
+            z-index: -1;
+            top: 10%;
+            left: 10%;
+            width: 100%;
+            filter: brightness(1) opacity(0.5);
+            animation-name: cloud-move-2;
+            animation-duration: 40s;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+            overflow: hidden;
+        }
+
+        .large-cloud-2{
+            position: absolute;
+            z-index: -1;
+            top: 40%;
+            left: -20%;
+            width: 100%;
+            filter: brightness(7) opacity(0.5);
+            animation-name: cloud-move;
+            animation-duration: 40s;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+            overflow: hidden;
+        }
+
+
+        @keyframes cloud-move-2 {
+            0% {
+                transform: translateX(0%);
+            }
+            100% {
+                transform: translateX(20%);
+            }
+        }
+
+        @keyframes cloud-move {
+            0% {
+                transform: translateX(0%) rotate(180deg);
+            }
+            100% {
+                transform: translateX(20%) rotate(180deg); 
+            }
+        }
+
+        @media (max-width: 768px) {
+            .large-cloud, .large-cloud-2 {
+                display: none;
+            }
+        }
     }
-    
+    @media (max-width: 768px) {
+        .start-page {
+            min-height: 45vh;
+        }
+    }
 }
-
-.bg-image{
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-    -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-    filter: brightness(0.6);
-}
-
 
 .slider-logos{
     img{
