Login with spring api

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,3 +1,5 @@
+<p-toast></p-toast>
+
 <img src="assets/background.jpg" alt="" class="bg-image" />
 <a routerLink="/" class="absolute top-4 left-4 z-10 flex items-center">
     <img src="assets/logoMathieu_black.png" alt="Logo" class="h-7 sm:h-8 w-auto" />
