--- a/src/app/home/navbar/navbar.html
+++ b/src/app/home/navbar/navbar.html
@@ -43,8 +43,13 @@
 
     <!-- Actions (right on desktop) -->
     <div class="mt-4 flex flex-col gap-3 lg:mt-0 lg:flex-row lg:items-center lg:gap-6">
-      <a (click)="close()" routerLink="/login" class="btn-link">Log in</a>
-      <a (click)="close()" routerLink="/register" class="btn-primary">Sign In</a>
+      <div *ngIf="isLoggedIn; else loggedOut">
+        <a (click)="logout()" class="btn-link">Logout</a>
+      </div>
+      <ng-template #loggedOut>
+        <a routerLink="/login" class="btn-link">Log in</a>
+        <a routerLink="/register" class="btn-primary">Sign In</a>
+      </ng-template>
     </div>
   </nav>
 </header>
