--- a/src/app/admin/products/products.html
+++ b/src/app/admin/products/products.html
@@ -7,6 +7,12 @@
     [rowsPerPageOptions]="[8, 16, 24]">
     <ng-template #header>
       <div class="flex justify-end">
+         <p-button
+          icon="pi pi-plus"
+          label="Add product"
+          (click)="newProduct()">
+        </p-button>
+        
         <p-selectbutton [(ngModel)]="layout" [options]="options" [allowEmpty]="false">
           <ng-template #item let-item>
             <i class="pi " [ngClass]="{ 'pi-bars': item.value === 'list', 'pi-table': item.value === 'grid' }"></i>
@@ -72,6 +78,7 @@
   [(visible)]="editDialogVisible"
   (save)="onProductSaved($event)"
   (cancel)="editDialogVisible = false"
+  [isSaving]="isSaving"
 ></app-edit-product-dialog>
 
 <router-outlet></router-outlet>
