--- a/src/app/admin/products/products.html
+++ b/src/app/admin/products/products.html
@@ -10,7 +10,8 @@
          <p-button
           icon="pi pi-plus"
           label="Add product"
-          (click)="newProduct()">
+          (click)="newProduct()"
+          class="mr-2">
         </p-button>
         
         <p-selectbutton [(ngModel)]="layout" [options]="options" [allowEmpty]="false">
